image stitching testing and depth to point cloud testing

--- a/image-segmentation/image-segmentation-test.ipynb
+++ b/image-segmentation/image-segmentation-test.ipynb
@@ -44,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "03b5d1dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_path = './sub-001.jpg'"
+    "image_path = '.images/sub-001.jpg'"
    ]
   },
   {
