remove outlier blobs

--- a/image-segmentation/image-segmentation-sept30.ipynb
+++ b/image-segmentation/image-segmentation-sept30.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6ec64c82",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "fd9f0fed",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "2751c121",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "c7d09d23",
    "metadata": {},
    "outputs": [
@@ -153,9 +153,9 @@
      "output_type": "stream",
      "text": [
       "[W NNPACK.cpp:64] Could not initialize NNPACK! Reason: Unsupported hardware.\n",
-      "/var/folders/k9/q0p5_p4s46q2lxnn596xb31h0000gn/T/ipykernel_26616/2523314899.py:12: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "/var/folders/k9/q0p5_p4s46q2lxnn596xb31h0000gn/T/ipykernel_64922/2523314899.py:12: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  for b in preds.boxes if int(b.cls.cpu().numpy()) == 0]\n",
-      "/var/folders/k9/q0p5_p4s46q2lxnn596xb31h0000gn/T/ipykernel_26616/2523314899.py:11: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "/var/folders/k9/q0p5_p4s46q2lxnn596xb31h0000gn/T/ipykernel_64922/2523314899.py:11: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  float(b.conf.cpu().numpy()))\n"
      ]
     },
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "0f09fee0",
    "metadata": {},
    "outputs": [
@@ -214,16 +214,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2025-09-30 10:53:37--  https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth\n",
-      "Resolving dl.fbaipublicfiles.com (dl.fbaipublicfiles.com)... 3.164.92.58, 3.164.92.123, 3.164.92.54, ...\n",
+      "--2025-10-05 12:40:13--  https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth\n",
+      "Resolving dl.fbaipublicfiles.com (dl.fbaipublicfiles.com)... 3.164.92.58, 3.164.92.54, 3.164.92.123, ...\n",
       "Connecting to dl.fbaipublicfiles.com (dl.fbaipublicfiles.com)|3.164.92.58|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 2564550879 (2.4G) [binary/octet-stream]\n",
       "Saving to: ‘sam_vit_h.pth’\n",
       "\n",
-      "sam_vit_h.pth       100%[===================>]   2.39G  14.2MB/s    in 3m 18s  \n",
+      "sam_vit_h.pth       100%[===================>]   2.39G  25.7MB/s    in 2m 26s  \n",
       "\n",
-      "2025-09-30 10:56:55 (12.4 MB/s) - ‘sam_vit_h.pth’ saved [2564550879/2564550879]\n",
+      "2025-10-05 12:42:39 (16.7 MB/s) - ‘sam_vit_h.pth’ saved [2564550879/2564550879]\n",
       "\n"
      ]
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "77f91dda",
    "metadata": {},
    "outputs": [
@@ -244,8 +244,8 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/facebookresearch/segment-anything.git\n",
-      "  Cloning https://github.com/facebookresearch/segment-anything.git to /private/var/folders/k9/q0p5_p4s46q2lxnn596xb31h0000gn/T/pip-req-build-8qpp13l2\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/facebookresearch/segment-anything.git /private/var/folders/k9/q0p5_p4s46q2lxnn596xb31h0000gn/T/pip-req-build-8qpp13l2\n",
+      "  Cloning https://github.com/facebookresearch/segment-anything.git to /private/var/folders/k9/q0p5_p4s46q2lxnn596xb31h0000gn/T/pip-req-build-dbala37p\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/facebookresearch/segment-anything.git /private/var/folders/k9/q0p5_p4s46q2lxnn596xb31h0000gn/T/pip-req-build-dbala37p\n",
       "  Resolved https://github.com/facebookresearch/segment-anything.git to commit dca509fe793f601edb92606367a655c15ac00fdf\n",
       "  Installing build dependencies ... \u001b[?25ldone\n",
       "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "4675e057",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "28921932",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "b324bde8",
    "metadata": {},
    "outputs": [
@@ -451,52 +451,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "bd7dfd5b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved point cloud as person_point_cloud.ply\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "depth_map = np.load(\"person_depth_map.npy\")\n",
-    "depth_map = np.nan_to_num(depth_map, nan=0.0)\n",
+    "import numpy as np\n",
+    "import open3d as o3d\n",
     "\n",
+    "# load depth map and masked values\n",
+    "depth_map = np.load(\"person_depth_map.npy\")\n",
+    "masked_depth_values = np.load(\"person_depth_values.npy\")\n",
+    "depth_map = np.nan_to_num(depth_map, nan=0.0)\n",
     "H, W = depth_map.shape\n",
     "\n",
     "# generate pixel grid\n",
     "u = np.arange(W)\n",
     "v = np.arange(H)\n",
     "u, v = np.meshgrid(u, v)\n",
-    "\n",
-    "# flatten\n",
     "u = u.flatten()\n",
     "v = v.flatten()\n",
     "z = depth_map.flatten()\n",
     "\n",
-    "# only keep points with valid depth\n",
-    "# edit this to exclude the outliers\n",
+    "# keep valid points within depth percentiles\n",
     "valid = z > 0\n",
-    "# flip Y to correct upside-down viewing with open3d\n",
-    "v_flipped = H - 1 - v[valid]\n",
     "\n",
+    "v_flipped = H - 1 - v[valid]\n",
     "points = np.stack([u[valid], v_flipped, z[valid]], axis=-1)\n",
     "\n",
     "# create point cloud\n",
     "pcd = o3d.geometry.PointCloud()\n",
     "pcd.points = o3d.utility.Vector3dVector(points)\n",
     "\n",
-    "# visualize\n",
-    "o3d.visualization.draw_geometries([pcd])\n",
+    "# remove small floating blobs using DBSCAN\n",
+    "labels = np.array(pcd.cluster_dbscan(eps=10.0, min_points=50))\n",
     "\n",
-    "# save as PLY\n",
-    "o3d.io.write_point_cloud(\"person_point_cloud.ply\", pcd)\n",
-    "print(\"Saved point cloud as person_point_cloud.ply\")"
+    "# keep only the largest cluster\n",
+    "largest_label = np.bincount(labels[labels >= 0]).argmax()\n",
+    "pcd_mainbody = pcd.select_by_index(np.where(labels == largest_label)[0])\n",
+    "\n",
+    "# visualize and save\n",
+    "o3d.visualization.draw_geometries([pcd_mainbody])\n",
+    "o3d.io.write_point_cloud(\"person_point_cloud_mainbody.ply\", pcd_mainbody)\n"
    ]
   }
  ],
