--- a/test_scripts/depth-image-to-point-cloud.ipynb
+++ b/test_scripts/depth-image-to-point-cloud.ipynb
@@ -177,19 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f40e5f4e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'gray' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# normalize values\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m depth_sim = \u001b[43mgray\u001b[49m.astype(np.float32) / \u001b[32m255.0\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# image size\u001b[39;00m\n\u001b[32m      5\u001b[39m h, w = depth_sim.shape\n",
+      "\u001b[31mNameError\u001b[39m: name 'gray' is not defined"
+     ]
     }
    ],
    "source": [
